--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -53,7 +53,7 @@
     </section>
 
     {{!-- Vendor Info Card--}}
-    <section>
+    <section id="vendor-section">
       <div class="card-body">
         <h3 class="card-title">Vendor Info</h3>
         <div style="overflow-x:auto;">
