--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -59,7 +59,12 @@
     {{!-- Vendor Info Card--}}
     <section>
       <div class="card-body">
-        <h3 class="card-title">Vendor Info</h3>
+        <div class = "container">
+          <div class = "row">
+        <h3 class="card-title col-3">Vendor Info</h3>
+        <a type="button" class="btn btn-success col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add</a>
+          </div>
+        </div>
         <div style="overflow-x:auto;"></div>
         <div style="overflow-x:auto;">
           <table class="table table-striped">
