changed section tag to container tag

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,9 +21,9 @@
     font-family: "Raleway", sans-serif;
   }
 
-  /* #vendor-section {
+  #vendor-section {
     margin-bottom: 10px;
-  } */
+  }
 
   p {
     margin-bottom: 15px;
