--- a/views/planner.handlebars
+++ b/views/planner.handlebars
@@ -1,6 +1,7 @@
 <body>
+  <main>
      <!-- Nav bar -->
-    <nav class="navbar navbar-default">
+     <nav class="navbar navbar-expand-sm bg-light">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/members">
@@ -57,4 +58,5 @@
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomBounce3.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomEase3.min.js"></script>
+  </main>
 </body>
