--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,11 +14,18 @@
     margin: 10;
     margin-bottom:20px;
     padding: 10px;
+    justify-content: center;
     box-sizing: border-box;
     outline: none;
     list-style: none;
     text-decoration: none;
     font-family: "Raleway", sans-serif;
+  }
+
+  .card {
+    width: 40rem;
+    padding: 10px;
+    margin: 10px;
   }
 
   #vendor-section {
