--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -21,7 +21,7 @@
 
     </section>
 
-    <section class="wedding-table-content">
+    <div class="card">
 
       <div class="wedding-container">
         <h1>Weddings</h1>
@@ -50,7 +50,7 @@
         </table>
         <button type="button" class="btn btn-success" id="createWedding">Add Wedding</button>
       </div>
-    </section>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
