--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -8,6 +8,7 @@
       </div>
     </div>
   </nav>
+   <img src="/assets/Ap4p.png" class="jumbotron" id="logo"></img>
 
   <div class="container">
     <div class="row">
