--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <body>
     <main>
-
+        <img src="/assets/Ap4p.png" class="jumbotron" id="logo"></img>
 
         <div class="container">
             <div class="row">
