--- a/views/planner.handlebars
+++ b/views/planner.handlebars
@@ -1,6 +1,6 @@
 <body>
      <!-- Nav bar -->
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default color">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/members">
