--- a/views/vendor-create.handlebars
+++ b/views/vendor-create.handlebars
@@ -1,6 +1,6 @@
 <body>
   <main>
-      <nav class="navbar navbar-expand-sm bg-light">
+      <nav class="navbar navbar-expand-sm bg-light color">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/members">
