--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
+nav {
+  border-color: blue;
+}
 
   form.signup,
   form.login {
