--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,19 +1,7 @@
+<!-- Nav bar -->
+
 <body>
   <main>
-    <!-- Nav bar -->
-    <nav class="navbar navbar-expand-sm bg-light">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/members">
-            Main
-          </a>
-          <a class="navbar-brand" href="/logout">
-            Logout
-          </a>
-        </div>
-      </div>
-    </nav>
-
     <!-- Welcome message -->
     <section class="welcome-user-message">
 
@@ -41,11 +29,17 @@
             <td>{{dataValues.couple}}</td>
             <td>{{dataValues.eventDate}}</td>
             {{!-- <td><a href="/summary/{{dataValues.id}}">Summary</a></td> --}}
-            <td><button type="button" class="btn btn-primary" onclick="window.location = '/summary/{{dataValues.id}}';"><i class="far fa-file"></i> Summary</button></td>
+            <td><button type="button" class="btn btn-primary"
+                onclick="window.location = '/summary/{{dataValues.id}}';"><i class="far fa-file"></i> Summary</button>
+            </td>
             {{!-- <td><a href="/vendorInfos/{{dataValues.id}}">Add</a></td> --}}
-            <td><button type="button" class="btn btn-success" onclick="window.location = '/vendorInfos/{{dataValues.id}}';"><i class="fas fa-user-plus"></i> Add</button></td>
-            {{!-- <td><a style='cursor:pointer;color:red' data-Id="{{dataValues.id}}" class='delete-event'>Delete</a></td> --}}
-            <td><button type="button" class="btn btn-danger delete-event" data-Id="{{dataValues.id}}"><i class="far fa-trash-alt fa-1x"></i> Delete</button></td>
+            <td><button type="button" class="btn btn-success"
+                onclick="window.location = '/vendorInfos/{{dataValues.id}}';"><i class="fas fa-user-plus"></i>
+                Add</button></td>
+            {{!-- <td><a style='cursor:pointer;color:red' data-Id="{{dataValues.id}}" class='delete-event'>Delete</a>
+            </td> --}}
+            <td><button type="button" class="btn btn-danger delete-event" data-Id="{{dataValues.id}}"><i
+                  class="far fa-trash-alt fa-1x"></i> Delete</button></td>
           </tr>
           {{/each}}
         </table>
