--- a/views/planner_BASE_13022.handlebars
+++ b/views/planner_BASE_13022.handlebars
@@ -1,6 +1,17 @@
 <body>
-  <main>
      <!-- Nav bar -->
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/members">
+            Main
+          </a>
+          <a class="navbar-brand" href="/logout">
+            Logout
+          </a>
+        </div>
+      </div>
+    </nav>
     <div class="container">
         {{!-- Event Input Form --}}
         <form class="planner">
@@ -44,8 +55,6 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZugWOlMVS7_70ajiCk05Mcn_g7qHMsls&libraries=places"></script>
     <script type="text/javascript" src="js/planner.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomBounce3.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/CustomEase3.min.js"></script>
-  </main>
 </body>
