--- a/views/vendor-create.handlebars
+++ b/views/vendor-create.handlebars
@@ -1,32 +1,37 @@
 <body>
   <main>
     {{!-- Vendor Input Form --}}
-    <form class="vendor">
-      {{!-- This value here is for the eventInfoId to create vendor --}}
-      <h3 id="eventInfoId">{{eventInfoId}}</h3>
-      <div class="form-group">
-        {{!-- Name --}}
+    <div class="card">
+      <div class="card-header">
+        <h3>Add a Vendor</h3>
+      </div>
+      <form class="vendor">
+        {{!-- This value here is for the eventInfoId to create vendor --}}
+        <h3 id="eventInfoId">{{eventInfoId}}</h3>
         <div class="form-group">
-          <label for="vendorName">Name</label>
-          <input type="text" class="form-control" id="vendorNameInput" placeholder="Vendor Name">
-        </div>
-        {{!-- Service --}}
-        <div class="form-group">
-          <label for="vendorService">Service</label>
-          <input type="text" class="form-control" id="vendorServiceInput" placeholder="Vendor Service">
-        </div>
-        {{!-- Email --}}
-        <div class="form-group">
-          <label for="vendorEmail">Email</label>
-          <input type="text" class="form-control" id="vendorEmailInput" placeholder="Email">
-        </div>
-        {{!-- Phone --}}
-        <div class="form-group">
-          <label for="vendorPhone">Phone</label>
-          <input type="text" class="form-control" id="vendorPhoneInput" placeholder="Phone">
-        </div>
-    </form>
-
+          {{!-- Name --}}
+          <div class="form-group">
+            <label for="vendorName">Name</label>
+            <input type="text" class="form-control" id="vendorNameInput" placeholder="Vendor Name">
+          </div>
+          {{!-- Service --}}
+          <div class="form-group">
+            <label for="vendorService">Service</label>
+            <input type="text" class="form-control" id="vendorServiceInput" placeholder="Vendor Service">
+          </div>
+          {{!-- Email --}}
+          <div class="form-group">
+            <label for="vendorEmail">Email</label>
+            <input type="text" class="form-control" id="vendorEmailInput" placeholder="Email">
+          </div>
+          {{!-- Phone --}}
+          <div class="form-group">
+            <label for="vendorPhone">Phone</label>
+            <input type="text" class="form-control" id="vendorPhoneInput" placeholder="Phone">
+          </div>
+      </form>
+    </div>
+    
     {{!-- Submit button --}}
     <button type="button" class="btn btn-success" id="submitVendorCreate">Submit</button>
     <button type="button" class="btn btn-success" id="addNewVendor">New Vendor</button>
