--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -9,10 +9,10 @@
     </div>
   </nav>
 
-  
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <h4>Sign Up</h4>
+  <div class="card">
+    <div class="card-header">
+        <h3>Sign Up</h3>
+      </div>
         <form class="signup">
           <div class="form-group">
             <label for="firstName">Name</label>
@@ -36,7 +36,7 @@
         <p>Or log in <a href="/login">here</a>.</p>
       </div>
     </div>
-  
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/signup.js"></script>
