--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,33 @@
 <body>
-    
 
-        
-            <div class="row">
-                <div class="col-md-6 col-md-offset-3">
-                    <h4>Log in below.</h4>
-                    <form class="login">
-                        <label for="exampleInputEmail1">Email</label>
-                        <input type="email" class="form-control" id="email-input" placeholder="Email">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="password-input" placeholder="Password">
-                        <button type="submit" class="btn btn-success">Login</button>
-                    </form>
-                    <br>
-                    <p>Or sign up <a href="/signup">here</a>.</p>
-                </div>
-            </div>
-       
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+
+    <div class="card">
+        <div class="card-header">
+            <h3>Sign Up</h3>
+        </div>
+        <form class="login">
+            <label for="exampleInputEmail1">Email</label>
+            <input type="email" class="form-control" id="email-input" placeholder="Email">
+            <label for="exampleInputPassword1">Password</label>
+            <input type="password" class="form-control" id="password-input" placeholder="Password">
+            <button type="submit" class="btn btn-success">Login</button>
+        </form>
+        <br>
+        <p>Or sign up <a href="/signup">here</a>.</p>
+    </div>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <script>
+        hidebar();
+        function hidebar() {
+            console.log('123')
+            $(".navbar").hide();
+        }
+    </script>
+
+    </main>
 </body>
