--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -43,4 +43,12 @@
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
   <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
 
+   <script>
+        hidebar();
+        function hidebar() {
+            console.log('123')
+            $(".navbar").hide();
+        }
+    </script>
+
 </body>
