--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,9 +35,10 @@
 			<script src="/js/signup.js"></script>
 			<script src="/js/vendor-create.js"></script>
 			<script src="js/summary.js"></script>
-			<footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-				<div class="text-center">
-					<small>Copyright &copy; Your Website</small>
+
+			<footer class="footer bg-dark">
+				<div class="container">
+					<span class="text-muted">Place sticky footer content here.</span>
 				</div>
 			</footer>
 		</div>
