--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -1,7 +1,6 @@
-<!-- Nav bar -->
 
-<body>
   <main>
+    <body>
     <!-- Welcome message -->
     <section class="welcome-user-message">
 
@@ -46,9 +45,10 @@
         <button type="button" class="btn btn-success" id="createWedding">Add Wedding</button>
       </div>
     </div>
-
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/members.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-  </main>
-</body>
+
+  </body>
+</main>
