--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -2,7 +2,7 @@
 
   <body>
     {{!-- Event Info Table --}}
-    <div class="card">
+    <div class="card" id="summary-card">
       <div class="card-header">
         <h3>Event Info</h3>
       </div>
@@ -45,7 +45,7 @@
 
 
     {{!-- Vendor Info Card--}}
-    <div class="card">
+    <div class="card" id="summary-card">
       <div class="card-header">
         <h3>Vendor Info</h3>
       </div>
