--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -8,7 +8,7 @@
 
     </section>
 
-    <div class="card">
+    <div class="card" id="members-card">
 
       <div class="wedding-container">
         <h1>Weddings</h1>
