guest functionality added. buttons not appearing on summary page?

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
 	<script src="/js/planner.js"></script>
 	<script src="/js/signup.js"></script>
 	<script src="/js/vendor-create.js"></script>
+	<script src="/js/guest-create.js"></script>
 	<script src="js/summary.js"></script>
  <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
     <div class="text-center">
