--- a/views/guest-create.handlebars
+++ b/views/guest-create.handlebars
@@ -1,18 +1,6 @@
 <body>
   <main>
-      <nav class="navbar navbar-expand-sm bg-light">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/members">
-            Main
-          </a>
-          <a class="navbar-brand" href="/logout">
-            Logout
-          </a>
-        </div>
-      </div>
-    </nav>
-    {{!-- Guest Input Form --}}
+      {{!-- Guest Input Form --}}
     <form class="guest">
       {{!-- This value here is for the eventInfoId to create guest --}}
       <h3 id="eventInfoId">{{eventInfoId}}</h3>
@@ -40,8 +28,8 @@
     </form>
 
     {{!-- Submit button --}}
-    <button type="button" class="btn btn-success" id="submitGuestCreate">Submit</button>
-    <button type="button" class="btn btn-success" id="addNewGuest">New Guest</button>
+    <button type="button" class="btn navbtn1" id="submitGuestCreate">Submit</button>
+    <button type="button" class="btn navbtn1" id="addNewGuest">New Guest</button>
 
     {{!-- Scripts --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
