--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,13 @@
 <body>
     <main>
         <img src="/assets/Ap4p.png" class="jumbotron" id="logo"></img>
-
+<div class="card">
+    <div class="card-header">
+        <h3>Log In</h3>
+    </div>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <h4>Log in below.</h4>
                     <form class="login">
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -18,8 +20,13 @@
                 </div>
             </div>
         </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/signup.js"></script>
+  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
+  <script src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>
+
 
     <script>
         hidebar();
