--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,10 @@
 <body>
 
 
-    <div class="col-lg 3 col-md-3 col-sm-12 col-xs-12"></div>
+
     <div class="card">
         <div class="card-header">
-            <h3>Sign Up</h3>
+            <h3>Log In</h3>
         </div>
         <form class="login">
             <label for="exampleInputEmail1">Email</label>
@@ -16,8 +16,8 @@
         <br>
         <p>Or sign up <a href="/signup">here</a>.</p>
     </div>
-    </div>
-    </div>
+    
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -29,5 +29,5 @@
         }
     </script>
 
-    </main>
+    
 </body>
