--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -1,20 +1,5 @@
 <body>
   <main>
-
-    {{!-- Nav Bar --}}
-    <nav class="navbar navbar-expand-sm bg-light">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/members">
-            Main
-          </a>
-          <a class="navbar-brand" href="/logout">
-            Logout
-          </a>
-        </div>
-      </div>
-    </nav>
-
   <body>
     {{!-- Event Info Table --}}
     <div class="card" id="summary-card">
@@ -61,7 +46,6 @@
       </div>
       {{!-- <div style="overflow-x:auto;"></div> --}}
       <div style="overflow-x:auto;">
-        <table class="table table-striped"></table>
         <table class="table table-striped">
           {{!-- Head --}}
           <thead>
@@ -98,14 +82,14 @@
         <a type="button" class="btn btn-success col-1" id="circleButton" href="/vendorInfos/{{event.id}}">Add Vendor</a>
       </div>
     </div>
-    </div>
+   
+
     {{!-- Guest List Card--}}
-    <div class="card">
+    <div class="card" id="summary-card">
       <div class="card-header">
         <h3>Guest List</h3>
       </div>
       <div style="overflow-x:auto;">
-        <table class="table table-striped"></table>
         <table class="table table-striped">
           {{!-- Head --}}
           <thead>
@@ -139,7 +123,7 @@
         <a type="button" class="btn btn-success col-1" id="circleButton" href="/guests/{{event.id}}">Add Guest</a>
       </div>
     </div>
-    </div>
+    
     {{!-- Scripts --}}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/summary.js"></script>
