--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,19 +5,20 @@
     <div class="card">
         <div class="card-header">
             <h3>Log In</h3>
+            </div>
+            <form class="login">
+                <label for="exampleInputEmail1">Email</label>
+                <input type="email" class="form-control" id="email-input" placeholder="Email">
+                <label for="exampleInputPassword1">Password</label>
+                <input type="password" class="form-control" id="password-input" placeholder="Password">
+                <button type="submit" class="btn btn-success">Login</button>
+            </form>
+            <br>
+            <p>Or sign up <a href="/signup">here</a>.</p>
         </div>
-        <form class="login">
-            <label for="exampleInputEmail1">Email</label>
-            <input type="email" class="form-control" id="email-input" placeholder="Email">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="password-input" placeholder="Password">
-            <button type="submit" class="btn btn-success">Login</button>
-        </form>
-        <br>
-        <p>Or sign up <a href="/signup">here</a>.</p>
     </div>
-    
-    
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
@@ -29,5 +30,5 @@
         }
     </script>
 
-    
+
 </body>
