--- a/views/summary.handlebars
+++ b/views/summary.handlebars
@@ -122,6 +122,7 @@
         </table>
         <a type="button" class="btn btn-success col-1" id="circleButton" href="/guests/{{event.id}}">Add Guest</a>
       </div>
+      </div>
     </div>
     
     {{!-- Scripts --}}
